# manager

./: README.md  compose.yml
.github/workflows/: python-app.yml  team-docs-gen.yml
app/: .gitignore  Dockerfile  Dockerfile.dev  README.md
app/.devcontainer/: compose.yml
app/src/: analyzer.py  db_models.py  info.py  line.py  server.py  web.py
app/src/plan/: add.py  gen_message.py  main.py  modify.py  modify_plan.py  notify.py  remove.py  remove_plan.py  search.py
app/tests/: conftest.py  test_analyzer.py  test_notif.py  test_plan.py  test_request.py
lib/analyzer/: Cargo.toml
lib/analyzer/src/: basic.rs  data_time.rs  date.rs  date_time.rs  digits.rs  lib.rs  main.rs  name_op.rs  time.rs  title_op.rs
lib/analyzer/tests/: test_analyze.rs  test_get_data_time.rs  test_get_title_and_op.rs
proxy/: Dockerfile  nginx.conf
team/: README.md  config.py  gantt.md  gen_gantt.py  limit.md  report.csv
web/: .gitignore  Dockerfile  Dockerfile.dev  README.md  jest.config.ts  nginx.conf  package.json  tsconfig.json
web/.devcontainer/: compose.yml
web/public/: index.html
web/src/: App.tsx  HowToUse.tsx  Plan.tsx  index.css  plan.ts  plan.tsx
web/src/components/: AddPlan.tsx  Calendar.tsx  GetPlanList.tsx  LineLoginBottun.tsx  LoggedIn.tsx  LoggedOut.tsx  ModifyPlan.tsx  PlanAddDialog.tsx  PlanModifyDialog.tsx  PlanRemoveDialog.tsx  PlanShowDialog.tsx  RemovePlan.tsx  UserShowDialog.tsx  addPlan.tsx  getPlanList.tsx  loggedOut.tsx  modifyPlan.tsx  planRemoveDialog.tsx  removePlan.tsx
web/src/tests/: dateFormat.test.tsx  getPlanList.test.ts  getPlanList.test.tsx
(+10 files in other folders)
