[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "analyzer"
path = "src/lib.rs"

[[bin]]
name = "analyzer"
path = "src/main.rs"

[dependencies]
mecab = "*"
once_cell = "1.17.1"
chrono = "0.4.24"
nom = "7.1.3"
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
csv = "1.2.1"
